--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>PROJECT METADATA</title>
 </head>
 <body>
     
+    <div class="wrapper">
 
-    <script src="./index.js"></script>
+    </div>
+
+    <script src="../static/javascript/index.js"></script>
 </body>
 </html>
