completed landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,169 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="../static/files/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/metadata.css">
+    <link rel="stylesheet" href="../static/css/works.css">
+    <link rel="stylesheet" href="../static/css/support.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
     <title>PROJECT METADATA</title>
 </head>
 <body>
     
     <div class="wrapper">
+
+        <header>
+            <img src="../static/files/images/icon.png" alt="">
+
+            <nav>
+                <a href="/">Home</a>
+                <a href="/">About Us</a>
+                <a href="/">FAQs</a>
+                <a href="/">Contact Us</a>
+            </nav>
+
+            <nav class="register">
+                <a href="" id="sign">Sign Up</a>
+                <a href="" id="log">Log in</a>
+            </nav>
+        </header>
+
+        <main>
+
+            <div class="one land">
+                <div class="text">
+                    <h1>
+                        <span>Generating</span> Metadata Made Easy
+                    </h1>
+                    <p>
+                        Fetch_Metadata provides you with information of data about other Data. <br>
+                        Register to get full access to every feature Fetch_Metadata has to offer!
+                    </p>
+                </div>
+
+                <img src="../static/files/images/image 5.png" alt="">
+            </div>
+
+        </main>
+
+        <section class="metadata">
+            <h1>
+                What is Metadata?
+            </h1>
+
+            <div class="block">
+                <div class="text">
+                    <p>
+                        Metadata is a set of data that describes and gives information about other data. 
+                        <br> <br>
+                        It summarises basic information about data, making finding & working 
+                        with particular instances of data easier.
+                    </p>
+                </div>
+
+                <img src="../static/files/images/image 7.png" alt="">
+            </div>
+        </section>
+
+        <section class="works">
+            <h1>
+                How it works
+            </h1>
+            <div class="block">
+
+                <div class="card">
+                    <span>1</span>
+                    <p>
+                        Upload any File Fetch_Metadata
+                        will read its data for you
+                    </p>
+                </div>
+
+                <div class="card">
+                    <span>2</span>
+                    <p>
+                        View the Metadata of your uploaded file
+                    </p>
+                </div>
+
+                <div class="card">
+                    <span>3</span>
+                    <p>
+                        Export, download,share and save your file Metadata
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="support">
+
+            <h1>
+                Get Support
+            </h1>
+
+            <div class="block">
+                <p>
+                    Our team is readily available for you
+                </p>
+
+                <div class="buttons">
+                    <button type="submit" id="send">Send Mail</button>
+                    <p>or</p>
+                    <button type="submit" id="live">Live Chat &nbsp; <img src="../static/files/images/messages-2.png" alt=""></button>
+                </div>
+            </div>
+
+        </section>
+
+        <footer>
+            <div class="foots">
+                
+                <div class="socials">
+
+                    <p>Connect with us</p>
+                    
+                    <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    
+                </div>
+                
+                <div class="links">
+                    
+                    <p>Quick Link</p>
+                    
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">How it works</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Register</a></li>
+                        <li><a href="">Login</a></li>
+                    </ul>
+                    
+                </div>
+                
+                <div class="help">
+                    
+                    <p>Support</p>
+                    
+                    <ul>
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Help</a></li>
+                        <li><a href="">Blogs</a></l1>
+                    </ul>
+                    
+                </div>
+            </div>
+
+            <div class="copy">
+                copyright © 2022 Team_Scorpion 2
+            </span>
+        </footer>
 
     </div>
 
