--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="../static/files/images/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/header.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/metadata.css">
-    <link rel="stylesheet" href="../static/css/works.css">
-    <link rel="stylesheet" href="../static/css/support.css">
-    <link rel="stylesheet" href="../static/css/footer.css">
+    <link rel="shortcut icon" href="{% static "files/images/icon.png" %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static "css/style.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/header.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/main.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/metadata.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/works.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/support.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/footer.css" %}"/>
     <title>PROJECT METADATA</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     <div class="wrapper">
 
         <header>
-            <img src="../static/files/images/icon.png" alt="">
+            <img src="{% static "files/images/icon.png" %}" alt="">
 
             <nav>
                 <a href="/">Home</a>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
 
-                <img src="../static/files/images/image 5.png" alt="">
+                <img src="{% static "files/images/image5.png" %} alt="">
             </div>
 
         </main>
@@ -69,7 +69,7 @@
                     </p>
                 </div>
 
-                <img src="../static/files/images/image 7.png" alt="">
+                <img src="{% static "files/images/image7.png" %}" alt="">
             </div>
         </section>
 
@@ -118,7 +118,7 @@
                 <div class="buttons">
                     <button type="submit" id="send">Send Mail</button>
                     <p>or</p>
-                    <button type="submit" id="live">Live Chat &nbsp; <img src="../static/files/images/messages-2.png" alt=""></button>
+                    <button type="submit" id="live">Live Chat &nbsp; <img src="{% static "files/images/messages-2.png" %}" alt=""></button>
                 </div>
             </div>
 
@@ -171,6 +171,6 @@
 
     </div>
 
-    <script src="../static/javascript/index.js"></script>
+    <script src="{% static "javascript/index.js" %}"></script>
 </body>
 </html>
