--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/login.css">
-    <title>Scorpion Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="../static/files/images/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
+    <title>LOGIN</title>
 </head>
 <body>
     <div class="wrapper">
+        <!-- header/nav section -->
+        <header>
+            <img src="../static/files/images/icon.png" alt="">
+
+            <nav>
+                <a href="/">Home</a>
+                <a href="/">About Us</a>
+                <a href="/">FAQs</a>
+                <a href="/">Contact Us</a>
+            </nav>
+
+            <nav class="register">
+                <a href="" id="sign">Sign Up</a>
+                <a href="" id="log">Log in</a>
+            </nav>
+        </header>
+
+        <!-- Main section -->
+        <div class="loginwrapper">
+            <div class="logincontent">
+                <h3>Welcome Back </h3>
+                <h5><q>Metadata liberates us, liberates knowledge</q></h5>
+                <h6>David Weinberger</h6>
+                <img src="/static/files/images/rafiki.png" alt="Rafiki">
+            </div>
+            <div class="loginform">
+                <form action="#" method="" enctype="">
+                    <label for="name"> <b>Name</b> </label>
+                    <input type="text" name="name" id="name" placeholder="Enter your username" required>
+                    <label for="password"> <b>Password</b> </label>
+                    <input type="password" name="password" id="password" placeholder="Enter your password" required>
+                    <div class="remember"><input type="checkbox" name="checkbox" id="lcheckbox">
+                        <u>Stay logged in</u></div>
+                    <div class="loginbutton">
+                        <button type="submit">Login</button>
+                        <p>Don't  have an account? <a href="/templates/signup.html">Sign up</a> </p>
+                    </div>
+                </form>
+
+            </div>
+        </div>
         
+
+
+
+        <!-- Footer section -->
+        <footer>
+            <div class="foots">
+                
+                <div class="socials">
+
+                    <p>Connect with us</p>
+                    
+                    <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    
+                </div>
+                
+                <div class="links">
+                    
+                    <p>Quick Link</p>
+                    
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">How it works</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Register</a></li>
+                        <li><a href="">Login</a></li>
+                    </ul>
+                    
+                </div>
+                
+                <div class="help">
+                    
+                    <p>Support</p>
+                    
+                    <ul>
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Help</a></li>
+                        <li><a href="">Blogs</a></l1>
+                    </ul>
+                    
+                </div>
+            </div>
+
+            <div class="copy">
+                copyright © 2022 Team_Scorpion 2
+            </span>
+        </footer>
     </div>
 </body>
 </html>
