--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -11,9 +11,13 @@
     font-weight: 400;
     font-family: var(--font-main);
     line-height: 39px;
-    color: #001744;
+    color: var(--sub-color);
     margin-block: 3rem 2.125rem;
     text-align: center;
+}
+
+form input{
+    outline: none;
 }
 
 .name {
@@ -22,66 +26,64 @@
 }
 
 .name label {
-    color: rgba(0, 0, 0, 0.69);
+    color: rgba(var(--drop-color), 0.69);
     font-size: 19px;
     font-family: var(--font-main);
 }
 .name input {
-width: 90%;
-border-radius: 5px;
-border: 1px solid #001744;
-background-color: #FFFFFF;
-padding: 8px;
-margin-block: 8px;
-
+    width: 90%;
+    border-radius: 5px;
+    border: 1px solid var(--sub-color);
+    background-color: var(--plain-color);
+    padding: 8px;
+    margin-block: 8px;
 }
 
 .lastname input {
-width: 100%;
-border-radius: 5px;
-border: 1px solid #001744;
-background-color: #FFFFFF;
-padding: 8px;
-margin-block: 8px;
-
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--sub-color);
+    background-color: var(--plain-color);
+    padding: 8px;
+    margin-block: 8px;
 }
 
 
 
 .email label {
-    color: rgba(0, 0, 0, 0.69);
+    color: rgba(var(--drop-color), 0.69);
     font-size: 19px;
     font-family: var(--font-main);
 }
 .email input {
-width: 100%;
-border-radius: 5px;
-border: 1px solid #001744;
-background-color: #FFFFFF;
-padding: 8px;
-margin-block: 8px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--sub-color);
+    background-color: var(--plain-color);
+    padding: 8px;
+    margin-block: 8px;
 
 }
 
 .password label {
-    color: rgba(0, 0, 0, 0.69);
+    color: rgba(var(--drop-color), 0.69);
     font-size: 19px;
     font-family: var(--font-main);
 }
 .password input {
-width: 100%;
-border-radius: 5px;
-border: 1px solid #001744;
-background-color: #FFFFFF;
-padding: 8px;
-margin-block: 8px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--sub-color);
+    background-color: var(--plain-color);
+    padding: 8px;
+    margin-block: 8px;
 
 }
 
 .terms label {
     font-size: 19px;
     font-family: var(--font-main);
-    color: #001744;
+    color: var(--sub-color);
     line-height: 23px;
 }
 
@@ -93,8 +95,8 @@ margin-block: 8px;
 .button button {
     border-radius: 20px;
     padding: 13px 18px 15px;
-    color: #FFFFFF;
-    background-color: #001744;
+    color: var(--plain-color);
+    background-color: var(--sub-color);
     cursor: pointer;
 }
 
