--- a/templates/index.html
+++ b/templates/index.html
@@ -20,21 +20,25 @@
     
     <div class="wrapper">
 
+        <!-- header part -->
+
         <header>
             <img src="../static/files/images/icon.png" alt="">
 
-            <nav>
-                <a href="/">Home</a>
-                <a href="/">About Us</a>
+            <nav class="links">
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About Us</a>
                 <a href="/">FAQs</a>
                 <a href="/">Contact Us</a>
             </nav>
 
             <nav class="register">
-                <a href="" id="sign">Sign Up</a>
-                <a href="" id="log">Log in</a>
+                <a href="./signup.html" id="sign">Sign Up</a>
+                <a href="./login.html" id="log">Log in</a>
             </nav>
         </header>
+
+        <!-- the main body -->
 
         <main>
 
@@ -123,6 +127,8 @@
             </div>
 
         </section>
+
+        <!-- the footer -->
 
         <footer>
             <div class="foots">
