--- a/templates/login.html
+++ b/templates/login.html
@@ -20,15 +20,15 @@
             <img src="../static/files/images/icon.png" alt="">
 
             <nav>
-                <a href="/">Home</a>
-                <a href="/">About Us</a>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About Us</a>
                 <a href="/">FAQs</a>
                 <a href="/">Contact Us</a>
             </nav>
 
             <nav class="register">
-                <a href="" id="sign">Sign Up</a>
-                <a href="" id="log">Log in</a>
+                <a href="./signup.html" id="sign">Sign Up</a>
+                <a href="./login.html" id="log">Log in</a>
             </nav>
         </header>
 
@@ -46,7 +46,8 @@
                     <input type="text" name="name" id="name" placeholder="Enter your username" required>
                     <label for="password"> <b>Password</b> </label>
                     <input type="password" name="password" id="password" placeholder="Enter your password" required>
-                    <div class="remember"><input type="checkbox" name="checkbox" id="lcheckbox">
+                    <div class="remember">
+                        <input type="checkbox" name="checkbox" id="lcheckbox">
                         <u>Stay logged in</u></div>
                     <div class="loginbutton">
                         <button type="submit">Login</button>
