--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,15 +21,15 @@
             <img src="../static/files/images/icon.png" alt="">
 
             <nav>
-                <a href="/">Home</a>
-                <a href="/">About Us</a>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About Us</a>
                 <a href="/">FAQs</a>
                 <a href="/">Contact Us</a>
             </nav>
 
             <nav class="register">
-                <a href="" id="sign">Sign Up</a>
-                <a href="" id="log">Log in</a>
+                <a href="./signup.html" id="sign">Sign Up</a>
+                <a href="./login.html" id="log">Log in</a>
             </nav>
         </header>
 
@@ -40,7 +40,7 @@
                     <h3>Create An Account</h3>
                 </div>
                 <div class="signup-form">
-                    <form action="/templates/login.html" method="">
+                    <form action="./login.html" method="">
                         <div class="name">
                             <div class="firstname">
                                 <label for="firstname">First Name</label>
