--- a/static/css/header.css
+++ b/static/css/header.css
@@ -31,6 +31,11 @@ nav a:focus{
     color: var(--sub-color);
 }
 
+.links a.done { 
+    color: var(--sub-color);
+    border-bottom: 0.2rem solid var(--plain-color);
+}
+
 .register{
     padding: none;
     position: relative;
