auth issues fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
             <nav>
                 <a href="{% url 'first-page' %}">Home</a>
-                <a href="/">About Us</a>
+                <a href="{% url 'about-page' %}">About Us</a>
                 <a href="/">FAQs</a>
                 <a href="/">Contact Us</a>
             </nav>
