--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
                 <a href="{% url 'first-page' %}">Home</a>
                 <a href="{% url 'about-page' %}">About Us</a>
                 <a href="/">FAQs</a>
-                <a href="/">Contact Us</a>
+                <a href="./contact.html">Contact Us</a>
             </nav>
 
             <nav class="register">
