--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="{% static 'files/images/icon.png' %}" type="image/x-icon"/>
     <link rel="stylesheet" href="{%static 'css/style.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/header.css' %}"/>
@@ -31,11 +31,14 @@
             </nav>
 
             <nav class="register">
-
-                <a href="{% url 'sign-page' %}" id="sign">Sign Up</a>
-                <a href="{% url 'log-page' %}" id="log">Log in</a>
-
+                {% if user.is_authenticated %}
+                    <a href="{% url 'log-out' %}" id="out">Log out</a>
+                {%else%}
+                    <a href="{% url 'sign-page' %}" id="sign">Sign Up</a>
+                    <a href="{% url 'log-page' %}" id="log">Log in</a>
+               
             </nav>
+                {% endif %}
         </header>
 
         <!-- Main section -->
@@ -54,7 +57,7 @@
                      <input type="text" name="username"/>
                      <p>Password:</p>
                      <input type="password" name="password">
-                     <input type="Submit" value="Login">
+                     <input type="Submit" class="btn btn-primary" value="Login">
                      <div class="form-group form-check">
                         <label class="form-check-label">
                         <input class="form-check-input" type="checkbox"> Remember me
