--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,13 +30,24 @@
                 <a href="/">FAQs</a>
                 <a href="/">Contact Us</a>
             </nav>
-
+                    
             <nav class="register">
-
-                <a href="{% url 'sign-page' %}" id="sign">Sign Up</a>
-                <a href="{% url 'log-page' %}" id="log">Log in</a>
-
+                {% if user.is_authenticated %}
+                    <a href="{% url 'log-out' %}" id="out">Log out</a>
+                {%else%}
+                    <a href="{% url 'sign-page' %}" id="sign">Sign Up</a>
+                    <a href="{% url 'log-page' %}" id="log">Log in</a>
+               
             </nav>
+                <!-- {% endif %}
+
+                {%if messages %}
+                <ul class="messages">
+                    {% for message in messages%}
+                    <li {% if message.tags %} class="{{ message.tags}}"{% endif%}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %} -->
         </header>
 
         <!--Signup sections  -->
