--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
                      <p>Username:</p>
                      <input type="text" name="username"/>
                      <p>Password:</p>
-                     <input type="password" name="username">
+                     <input type="password" name="password">
                      <input type="Submit" value="Login">
                      <div class="form-group form-check">
                         <label class="form-check-label">
