--- a/templates/login.html
+++ b/templates/login.html
@@ -62,8 +62,16 @@
                     </div>
                         <p>Don't  have an account? <a href="{% url 'sign-page' %}">Sign up</a> </p>
                 </form>
+                <div>
+                    {% for errorMessage in messages %}
+                    <h3 style="color: red;">{{errorMessage}} </h3>
+                    {% endfor %}
+                </div>
             </div>
+            
         </div>
+       
+
 
 
 
@@ -94,9 +102,11 @@
                         <li><a href="{% url 'sign-page' %}">Register</a></li>
                         <li><a href="{% url 'log-page' %}">Login</a></li>
                     </ul>
+                    
 
                 </div>
-
+               
+                
                 <div class="help">
 
                     <p>Support</p>
