--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <!-- Side bar section -->
+    <!-- Side bar section -->
         <div class="a">
             <div class="sidebar">
                 <div class="profile-img">
@@ -20,34 +20,35 @@
                 </div>
                 <div class="folder" id="file">
                     <img src="/static/files/images/folder.png" alt="">
-                    <h4>My Files</h4>
+                    <button>My Files</button>
                 </div>
                 <div class="folder">
                     <img src="/static/files/images/eos-icons_storage-class-outlined.png" alt="">
-                    <h4>Storage</h4>
+                    <button>Storage</button>
                 </div>
                 <div class="folder">
                     <img src="/static/files/images/ph_trash-simple-thin.png" alt="">
-                    <h4>Trash</h4>
+                    <button>Trash</button>
                 </div>
                 <div class="divider">
                     <img src="/static/files/images/Line 57.png" alt=""></div>
                 <div class="folder">
                     <img src="/static/files/images/uil_setting.png" alt="">
-                    <h4>Settings</h4>
+                    <button>Settings</button>
                 </div>
                 <div class="folder">
                     <img src="/static/files/images/Vector.png" alt="">
-                    <h4>Support</h4>
+                    <button>Support</button>
                 </div>
                 <div class="folder" id="logout">
                     <img src="/static/files/images/ion_log-out-outline.png" alt="">
-                    <h4>Log Out</h4>
+                    <button>Log Out</button>
                 </div>
             </div>
         </div>
-        <div class="b">
+
     <!-- main section -->
+        <div class="b">
         <!-- nav bar -->
             <div class="navbar">
                 <ul>
@@ -62,7 +63,9 @@
         
         <!-- upload section -->
             <div class="upload">
-                <img src="/static/files/images/Group 46.png" alt="">
+                <label for="filename">
+                <img src="/static/files/images/Group 46.png" alt=""></label>
+                <input type="file" name="filename" id="filename">
                 <p>Click to add a file</p>
                 <p>Only jpg, csv, pdf, and json</p>
             </div>
