--- a/templates/about.html
+++ b/templates/about.html
@@ -23,9 +23,12 @@
                 <a href="{% url 'first-page' %}">Home</a>
                 <a href="{% url 'about-page' %}">About Us</a>
                 <a href="/">FAQs</a>
-                <a href="./contact.html">Contact Us</a>
+                <a href="{% url 'cont-page' %}">Contact Us</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'dash-page' %}">Dashboard</a>
+                {%else%}
             </nav>
-
+                {%endif%}
             <nav class="register">
                 {% if user.is_authenticated %}
                     <a href="{% url 'log-out' %}" id="out">Log out</a>
