--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="../static/files/images/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/dashboard.css">
+    <link rel="shortcut icon" href="{% static 'files/images/icon.png' %}" type="image/x-icon"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/dashboard.css'%}"/>
     <title>Dashboard | Welcome</title>
 </head>
 <body>
@@ -16,33 +17,34 @@
         <div class="a">
             <div class="sidebar">
                 <div class="profile-img">
-                    <img src="/static/files/images/Group 60.png" alt="Profile Image">
+                    <img src="{% static 'files/images/Group 60.png' %}" alt="Profile Image"/>
                 </div>
                 <div class="folder" id="file">
-                    <img src="/static/files/images/folder.png" alt="">
+                    <img src="{% static 'files/images/folder.png' %}" alt=""/>
                     <button>My Files</button>
                 </div>
                 <div class="folder">
-                    <img src="/static/files/images/eos-icons_storage-class-outlined.png" alt="">
+                    <img src="{% static 'files/images/eos-icons_storage-class-outlined.png' %}" alt=""/>
                     <button>Storage</button>
                 </div>
                 <div class="folder">
-                    <img src="/static/files/images/ph_trash-simple-thin.png" alt="">
+                    <img src="{% static 'files/images/ph_trash-simple-thin.png' %}" alt=""/>
                     <button>Trash</button>
                 </div>
                 <div class="divider">
-                    <img src="/static/files/images/Line 57.png" alt=""></div>
+                    <img src="{% static 'files/images/Line 57.png' %}" alt=""/>
+                </div>
                 <div class="folder">
-                    <img src="/static/files/images/uil_setting.png" alt="">
+                    <img src="{% static 'files/images/uil_setting.png' %}" alt=""/>
                     <button>Settings</button>
                 </div>
                 <div class="folder">
-                    <img src="/static/files/images/Vector.png" alt="">
+                    <img src="{% static 'files/images/Vector.png' %}" alt=""/>
                     <button>Support</button>
                 </div>
                 <div class="folder" id="logout">
-                    <img src="/static/files/images/ion_log-out-outline.png" alt="">
-                    <button>Log Out</button>
+                    <img src="{% static 'files/images/ion_log-out-outline.png' %}" alt=""/>
+                    <a href="{% url 'log-out' %}"><button >Log Out</button></a>
                 </div>
             </div>
         </div>
@@ -52,20 +54,22 @@
         <!-- nav bar -->
             <div class="navbar">
                 <ul>
-                    <li><img src="/static/files/images/Group 84.png" alt=""></li>
+                    <li><img src="{% static 'files/images/Group 84.png' %}" alt=""></li>
                     <li><input type="search" name="search" id="search" placeholder="Search files"></li>
-                    <li><img src="/static/files/images/mdi_file-jpeg-box.png" alt=""></li>
-                    <li><img src="/static/files/images/fa-solid_file-csv.png" alt=""></li>
-                    <li><img src="/static/files/images/Vector (2).png" alt=""></li>
-                    <li><img src="/static/files/images/bxs_file-json.png" alt=""></li>
+                    <li><img src="{% static 'files/images/mdi_file-jpeg-box.png' %}" alt=""></li>
+                    <li><img src="{% static 'files/images/fa-solid_file-csv.png' %}" alt=""></li>
+                    <li><img src="{% static 'files/images/Vector (2).png' %}" alt=""></li>
+                    <li><img src="{% static 'files/images/bxs_file-json.png' %}" alt=""></li>
                 </ul>
             </div>
         
         <!-- upload section -->
             <div class="upload">
                 <label for="filename">
-                <img src="/static/files/images/Group 46.png" alt=""></label>
-                <input type="file" name="filename" id="filename">
+                <img src="{% static 'files/images/Group 46.png' %}" alt=""/>
+                </label>
+
+                <input type="file" name="filename" id="filename" enctype="multipart/form-data">
                 <p>Click to add a file</p>
                 <p>Only jpg, csv, pdf, and json</p>
             </div>
@@ -76,8 +80,8 @@
 
         <!-- view section -->
             <div class="view">
-                <img src="/static/files/images/material-symbols_download.png" alt="">
-                <img src="/static/files/images/Vector (3).png" alt="" class="sec-img">
+                <img src="{% static 'files/images/material-symbols_download.png' %}" alt=""/>
+                <img src="{% static 'files/images/Vector (3).png' %}" alt="" class="sec-img"/>
             </div>
 
         </div>
