--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
 
         <header>
-            <img src="{% static 'files/images/icon.png' %}" alt="Oops Image could not be displayed"/>
+            <a href="{% url 'first-page' %}"><img src="{% static 'files/images/icon.png' %}" alt="Oh, no.. the file wouldn't open"/></a>
 
             <nav class="links">
                 <a href="{% url 'first-page' %}">Home</a>
@@ -27,8 +27,9 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'dash-page' %}">Dashboard</a>
                 {%else%}
-            </nav>
                 {%endif%}
+            </nav>
+                
             <nav class="register">
                 {% if user.is_authenticated %}
                     <a href="{% url 'log-out' %}" id="out">Log out</a>
