--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -54,7 +54,7 @@
         <!-- nav bar -->
             <div class="navbar">
                 <ul>
-                    <li><img src="{% static 'files/images/Group 84.png' %}" alt=""></li>
+                    <li><a href="{% url 'first-page' %}"><img src="{% static 'files/images/icon.png' %}" alt="Oh, no.. the file wouldn't open"/></a></li>
                     <li><input type="search" name="search" id="search" placeholder="Search files"></li>
                     <li><img src="{% static 'files/images/mdi_file-jpeg-box.png' %}" alt=""></li>
                     <li><img src="{% static 'files/images/fa-solid_file-csv.png' %}" alt=""></li>
