--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
         <header>
 
-            <img src="{% static 'files/images/icon.png' %}" alt="Oh, no.. the file wouldn't open"/>
+            <a href="{% url 'first-page' %}"><img src="{% static 'files/images/icon.png' %}" alt="Oh, no.. the file wouldn't open"/></a>
 
 
             <nav class="links">
@@ -35,17 +35,19 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'dash-page' %}">Dashboard</a>
                 {%else%}
-            </nav>
                 {%endif%}
+            </nav>
+                
             <nav class="register">
                 {% if user.is_authenticated %}
                     <a href="{% url 'log-out' %}" id="out">Log out</a>
                 {%else%}
                     <a href="{% url 'sign-page' %}" id="sign">Sign Up</a>
                     <a href="{% url 'log-page' %}" id="log">Log in</a>
+                {% endif %}
                
             </nav>
-                {% endif %}
+                
         </header>
 
         <!-- the main body -->
