--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,11 @@
 
 
             <nav class="links">
-                <a href="{% url 'first-page' %}" class="link">Home</a>
-                <a href="{% url 'about-page' %}" class="link">About Us</a>
-                <a href="{% url 'cont-page' %}" class="link">Contact Us</a>
+                <a href="{% url 'first-page' %}">Home</a>
+                <a href="{% url 'about-page' %}">About Us</a>
+                <a href="{% url 'cont-page' %}">Contact Us</a>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'dash-page' %}" class="link">Dashboard</a>
+                    <a href="{% url 'dash-page' %}">Dashboard</a>
                 {%else%}
                 {%endif%}
             </nav>
@@ -251,7 +251,7 @@
                     <p>Quick Link</p>
                     
                     <ul>
-                        <li><a href="{% url 'first-page' %}"">Home</a></li>
+                        <li><a href="{% url 'first-page' %}">Home</a></li>
                         <li><a href="">How it works</a></li>
                         <li><a href="{% url 'about-page' %}">About Us</a></li>
                         <li><a href="{% url 'sign-page' %}">Register</a></li>
